se agregaron validaciones

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>labo-1</name>
+	<name>administrador-de-proyectos</name>
 	<comment></comment>
 	<projects>
 	</projects>
